package kt.com.tencent.cain.desigin_pattern.command

/**
 * @author cainjiang
 * @date 2020/7/20
 */
class Receiver {
    fun action(){
        println("执行命令")
    }
}